# capital

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/PRPs/prds/: pitch-deck-generator.prd.md
.claude/PRPs/reports/: fix-third-review-errors-report.md  pitch-deck-core-engine-report.md  pitch-deck-validation-engine-report.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
INPUT/: neuraplox_updates.md  neuraplox_v7_narrative_brief.docx
docs/plans/: 2026-02-26-deck-v7-brainstorm-state.md  2026-02-26-deck-v7-design.md  2026-02-26-deck-v7-implementation.md  v7-data-points.md  v7-execution-state.md
output/neuraplox/archive/: deck_v10_2026-02-26.json  deck_v10_2026-02-26.md  deck_v1_2026-02-22.json  deck_v1_2026-02-22.md  deck_v2_2026-02-22.json  deck_v2_2026-02-22.md  deck_v3_2026-02-22.json  deck_v3_2026-02-22.md  deck_v4_2026-02-22.json  deck_v4_2026-02-22.md  deck_v5_2026-02-22.json  deck_v5_2026-02-22.md  deck_v7_2026-02-26.json  deck_v7_2026-02-26.md  deck_v8_2026-02-26.json  deck_v8_2026-02-26.md  deck_v9_2026-02-26.json  deck_v9_2026-02-26.md
profiles/: earlybird.yaml
src/pitchdeck/: __init__.py  __main__.py  cli.py  models.py
tests/: conftest.py  test_cli_validate.py  test_engine.py  test_models.py  test_output.py  test_parsers.py  test_profiles.py  test_validation_report.py  test_validator.py
(+22 files in other folders)
